--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,6 +1,8 @@
 .wrapper
   .header
     .header__title  タイトル
+    .header__up  
+      = link_to "投稿", new_post_path
     .header__right  ログイン
   .main
     .main__side
