--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -36,9 +36,11 @@
       height: 100%;
       width: 100%;
       display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
       &__box  {
-        width: 100px;
-        height: 100px;
+        width: 300px;
+        height: 400px;
         
       }
     }
