--- a/app/views/posts/create.html.haml
+++ b/app/views/posts/create.html.haml
@@ -1,5 +1,4 @@
 .contents
   .contents__success
     %h3 投稿が完了しました
-    %a(class="btn" href="/posts") 投稿一覧へ戻る
-    
+    %a(class="btn" href="/") 投稿一覧へ戻る
