--- a/app/views/posts/destroy.html.haml
+++ b/app/views/posts/destroy.html.haml
@@ -1,4 +1,4 @@
 .contents
   .contents__success
     %h3 削除が完了しました
-    %a(class="btn" href="/) 投稿一覧へ戻る
+    = link_to'投稿一覧へ戻る', root_path, class:'btn'
